# RL_for_pRNN

./: .gitignore  LavaAnalysis.ipynb  README.md  RLplots.ipynb  gen_data.py  hyperparam_panel.py  justfile  multirun.yaml  pyproject.toml  trainNet.py  trainNet_Hydra.py  trainRL.py  train_RL.py
Configs/: Conf1.yaml  Conf1_Adel.yaml
Configs/exp/: CANN.yaml  CANN_Intrinsic.yaml  CANN_PO.yaml  CANN_PO_Intrinsic.yaml  FO.yaml  PC.yaml  PC_PO.yaml  PO.yaml  PO_Intrinsic.yaml  PO_Rec.yaml  PO_Rec_cat.yaml  PO_Rec_sum.yaml  Theta.yaml  Theta_Intrinsic.yaml  Theta_shared.yaml  Theta_single.yaml  pRNN.yaml  pRNN_Intrinsic.yaml  pRNN_PO.yaml  pRNN_PO_Intrinsic.yaml
Configs/rl/: ppo.yaml
ConfigsRNN/: config.yaml
ConfigsRNN/env_agent/: LavaCorners.yaml  Miniworld_pRNN_ae.yaml  Miniworld_vae.yaml
RLutils/: __init__.py  agent.py  algo.py  analysis.py  env.py  format.py  model.py  other.py  pc.py  storage.py
