[project]
name = "rl-for-prnn"
version = "0.1.0"
description = "This package builds an RL agent for pRNN."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Daniel Levenstein", email = "daniel.levenstein@mila.quebec" },
    { name = "Sabrina Du", email = "sabrina.du@mila.quebec"},
]
dependencies = [
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "scipy>=1.16.2",
    "torch>=2.8.0",
    "wandb>=0.22.0",
    "pRNN @ file:../pRNN"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rl-for-prnn"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
include = [
    "trainNet*",
    "RLutils/*.py",
]
exclude = [
    "Configs/",
    "ConfigsRNN/",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[project.urls]
Homepage = "https://github.com/SabrinaDu7/RL_for_pRNN"