[project]
name = "rl-for-prnn"
version = "0.1.0"
description = "This package builds an RL agent for pRNN."
readme = "README.md"
requires-python = ">=3.9, <=3.10.15"
authors = [
    { name = "Daniel Levenstein", email = "daniel.levenstein@mila.quebec" },
    { name = "Sabrina Du", email = "sabrina.du@mila.quebec"},
]
dependencies = [
    "hydra-core>=1.3.2",
    "matplotlib>=3.5.3",
    "numpy>=1.22.4",
    "pandas>=1.5.3",
    "scipy>=1.12.0",
    "torch>=2.7.1",
    "wandb>=0.21.3",
    "pRNN @ file:///Users/sabrinadu/Documents/Labs/PeyracheLab/projects/pRNN",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [tool.hatch.build.targets.wheel]
# packages = ["rl-for-prnn"]
# There needs to be a package/folder named rl-for-prnn for this to work

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
include = [
    "trainNet*",
    "RLutils/*.py",
]
exclude = [
    "Configs/",
    "ConfigsRNN/",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[project.urls]
Homepage = "https://github.com/SabrinaDu7/RL_for_pRNN"